 * [Clear-MofAuthoringMetadata](http://get-carbon.org/help/Clear-MofAuthoringMetadata.html) removes authoring metadata from .mof files.
 * [Copy-DscResource](http://get-carbon.org/help/Copy-DscResource.html) copies DSC resources (ZIP files, MSI archives, MOF files, etc.), including timestamps, checksums, and copying only changed files.
 * [Get-DscError](http://get-carbon.org/help/Get-DscError.html) gets any DSC errors that were written to a computer's DSC event log.
 * [Get-DscWinEvent](http://get-carbon.org/help/Get-DscWinEvent.html) gets DSC events that were written to a computer's DSC event log.
 * [Get-FileSharePermission](http://get-carbon.org/help/Get-FileSharePermission.ps1) gets the sharing permissions on a file/SMB share (*not* the NTFS file system permissions).
 * [Get-FileShare](http://get-carbon.org/help/Get-FileSharePermission.ps1) uses WMI to get `Win32_Share` objects for the file shares installed on the local computer.
 * [Get-Group](http://get-carbon.org/help/Get-Group.html) gets a local group or all local groups.
 * [Get-Msi](http://get-carbon.org/help/Get-Msi.html) reads installer information and properties from an MSI file.
 * [Get-PowerShellModuleInstallPath](http://get-carbon.org/help/Get-PowerShellModuleInstallPath.html) gets the path where new module's should be installed. Beginning with PowerShell 4, modules should get installed into `$env:ProgramFiles\Windows PowerShell\Modules`. Under PowerShell 3, it is `$PSHome\Modules`. This function returns the correct location for the version of PowerShell you're using.
 * [Get-User](http://get-carbon.org/help/Get-User.html) gets a local user or all local users.
 * [Initialize-Lcm](http://get-carbon.org/help/Initialize-Lcm.html) configures the DSC Local Configuration Manager on computers, including installing the private key needed for decrypting credentials.