@@ -1,0 +1,81 @@
+# Copyright 2012 Aaron Jensen
+# 
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+# 
+#     http://www.apache.org/licenses/LICENSE-2.0
+# 
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+function ConvertTo-SecurityIdentifier
+{
+    <#
+    .SYNOPSIS
+    Converts a string or byte array security identifier into a `System.Security.Principal.SecurityIdentifier` object.
+
+    .DESCRIPTION
+    `ConvertTo-SecurityIdentifier` converts a SID in SDDL form (as a string), in binary form (as a byte array) into a `System.Security.Principal.SecurityIdentifier` object. It also accepts `System.Security.Principal.SecurityIdentifier` objects, and returns them back to you.
+
+    If the string or byte array don't represent a SID, an error is written and nothing is returned.
+
+    .LINK
+    Resolve-Identity
+
+    .LINK
+    Resolve-IdentityName
+
+    .EXAMPLE
+    Resolve-Identity -SID 'S-1-5-21-2678556459-1010642102-471947008-1017'
+
+    Demonstrates how to convert a a SID in SDDL into a `System.Security.Principal.SecurityIdentifier` object.
+
+    .EXAMPLE
+    Resolve-Identity -SID (New-Object 'Security.Principal.SecurityIdentifier' 'S-1-5-21-2678556459-1010642102-471947008-1017')
+
+    Demonstrates that you can pass a `SecurityIdentifier` object as the value of the SID parameter. The SID you passed in will be returned to you unchanged.
+
+    .EXAMPLE
+    Resolve-Identity -SID $sidBytes
+
+    Demonstrates that you can use a byte array that represents a SID as the value of the `SID` parameter.
+    #>
+    [CmdletBinding()]
+    param(
+        [Parameter(Mandatory=$true)]
+        # The SID to convert to a `System.Security.Principal.SecurityIdentifier`. Accepts a SID in SDDL form as a `string`, a `System.Security.Principal.SecurityIdentifier` object, or a SID in binary form as an array of bytes.
+        $SID
+    )
+
+    Set-StrictMode -Version 'Latest'
+
+    try
+    {
+        if( $SID -is [string] )
+        {
+            New-Object 'Security.Principal.SecurityIdentifier' $SID
+        }
+        elseif( $SID -is [byte[]] )
+        {
+            New-Object 'Security.Principal.SecurityIdentifier' $SID,0
+        }
+        elseif( $SID -is [Security.Principal.SecurityIdentifier] )
+        {
+            $SID
+        }
+        else
+        {
+            Write-Error ('Invalid SID. The `SID` parameter accepts a `System.Security.Principal.SecurityIdentifier` object, a SID in SDDL form as a `string`, or a SID in binary form as byte array. You passed a ''{0}''.' -f $SID.GetType())
+            return
+        }
+    }
+    catch
+    {
+        Write-Error ('Exception converting SID parameter to a `SecurityIdentifier` object. This usually means you passed an invalid SID in SDDL form (as a string) or an invalid SID in binary form (as a byte array): {0}' -f $_.Exception.Message)
+        return
+    }
+}
