@@ -19,15 +19,22 @@ function Resolve-IdentityName
     Determines the full, NT identity name for a user or group.
     
     .DESCRIPTION
-    The common name for an account is not always the canonical name used by the operating system.  For example, the local Administrators group is actually called BUILTIN\Administrators.  This function converts an identity's name into its canonical name.
+    `Resolve-IdentityName` resolves a user/group name into its full, canonical name, used by the operating system. For example, the local Administrators group is actually called BUILTIN\Administrators. With a canonical username, you can unambiguously compare principals on objects that contain user/group information.
 
-    If you want to get full identit information (domain, type, sid, etc.), use `Resolve-Identity`.
+    If unable to resolve a name into an identity, `Resolve-IdentityName` returns nothing.
+
+    If you want to get full identity information (domain, type, sid, etc.), use `Resolve-Identity`.
+
+    In Carbon 2.0, you can also resolve a SID into its identity name. The `SID` parameter accepts a SID in SDDL form as a `string`, a `System.Security.Principal.SecurityIdentifier` object, or a SID in binary form as an array of bytes. If the SID no longer maps to an active account, you'll get the original SID in SDDL form (as a string) returned to you.
 
     .LINK
-    Test-Identity
+    ConvertTo-SecurityIdentifier
 
     .LINK
     Resolve-Identity
+
+    .LINK
+    Test-Identity
 
     .LINK
     http://msdn.microsoft.com/en-us/library/system.security.principal.securityidentifier.aspx
@@ -43,16 +50,44 @@ function Resolve-IdentityName
     
     Returns `BUILTIN\Administrators`, the canonical name for the local Administrators group.
     #>
-    [CmdletBinding()]
+    [CmdletBinding(DefaultParameterSetName='ByName')]
     [OutputType([string])]
     param(
-        [Parameter(Mandatory=$true)]
+        [Parameter(Mandatory=$true,ParameterSetName='ByName')]
         [string]
         # The name of the identity to return.
-        $Name
+        $Name,
+
+        [Parameter(Mandatory=$true,ParameterSetName='BySid')]
+        # Get an identity's name from its SID. Accepts a SID in SDDL form as a `string`, a `System.Security.Principal.SecurityIdentifier` object, or a SID in binary form as an array of bytes.
+        #
+        # This parameter is new in Carbon 2.0.
+        $SID
     )
 
     Set-StrictMode -Version 'Latest'
+
+    if( $PSCmdlet.ParameterSetName -eq 'ByName' )
+    {
+        return Resolve-Identity -Name $Name -ErrorAction Ignore | Select-Object -ExpandProperty 'FullName'
+    }
+    elseif( $PSCmdlet.ParameterSetName -eq 'BySid' )
+    {
+        $SID = ConvertTo-SecurityIdentifier -SID $SID
+        if( -not $SID )
+        {
+            return
+        }
+
+        $id = [Carbon.Identity]::FindBySid( $SID )
+        if( $id )
+        {
+            return $id.FullName
+        }
+        else
+        {
+            return $SID.ToString()
+        }
+    }
     
-    return Resolve-Identity -Name $Name -ErrorAction Ignore | Select-Object -ExpandProperty 'FullName'
 }
